@@ -13,7 +13,7 @@ module Nokogiri
         children = if ctx
                      # Fix for issue#490
                      if Nokogiri.jruby?
-                       ctx.parse("<root>#{tags}</root>").xpath("/root/node()")
+                       ctx.parse("<root #{namespace_declarations(ctx)}>#{tags}</root>").children
                      else
                        ctx.parse(tags)
                      end
@@ -92,6 +92,13 @@ module Nokogiri
       end
 
       private
+
+      def namespace_declarations ctx
+        ctx.namespace_scopes.map do |namespace|
+          prefix = namespace.prefix.nil? ? "" : ":#{namespace.prefix}"
+          %Q{xmlns#{prefix}="#{namespace.href}"}
+        end.join ' '
+      end
 
       def coerce data
         return super unless String === data
