@@ -21,6 +21,7 @@
   * JRuby Unknown namespace are ignore when the recover option is used. #748
   * JRuby XPath queries for namespaces should not throw exceptions when called twice in a row. #764
   * [jruby] More consistent (with libxml2) whitespace formatting when emitting XML (#771)
+  * JRuby namespaced attributes broken when appending raw xml to builder. #770
 
 
 == 1.5.5 / 2012-06-24
